@@ -4,7 +4,7 @@ license="MIT"
 [[mods]]
 modId="doomweapon"
 version="${file.jarVersion}"
-displayName="Azuredooms Doom Mod"
+displayName="Doom Mod"
 logoFile="doomlogo.png"
 authors="AzureDoomC" 
 credits="Thanks to Narial/ulnight for the awesome Sword/Axe and textures! Also Credit to C-Legend for the tools and armor textures! Credit to Marctron for the new armor textures!"
@@ -16,4 +16,10 @@ Adds Doom into Minecraft
     mandatory=true
    	versionRange="[FORGE-1.16.1-3.0-beta1,)"
     ordering="NONE"
+    side="BOTH"
+[[dependencies.doomweapon]]
+    modId="geckolib3"
+    mandatory=true
+    versionRange="[3.0.0-beta.8,)"
+    ordering="BEFORE"
     side="BOTH"
